# wgpu-multiplatform

./: .gitignore  .travis.yml  Cargo.toml  build-wasm.sh  build.rs  index.html  package.json  setup.sh
demo/: Cargo.toml  build.rs
demo/src/: lib.rs  main.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  uniforms.rs
src/: lib.rs  main.rs  shader.frag  shader.frag.spv
vuepress/: .gitignore  README.md  package.json
vuepress/.vuepress/: config.js
vuepress/.vuepress/components/: Wgpu.vue  WgpuError.vue
vuepress/.vuepress/public/: README.md
