[package]
name = "wgpu-multiplatform"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# wgpu = "0.6"
wgpu = { version = "0.6", git = "https://github.com/gfx-rs/wgpu-rs" }
winit = { version = "0.23", features = ["web-sys"] }
env_logger = "0.7"
log = "0.4"
anyhow = "1.0"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.subscriber]
package = "wgpu-subscriber"
version = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "=0.3.45"
wasm-bindgen = "=0.2.68" # Must be exact
wasm-bindgen-futures = "0.4.18"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
rayon = "1.4"
shaderc = "0.6"